Update project link and fix HTML tags in index.html

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 
   <li>
     <p>
-       <a href="">  CFinBench: A Comprehensive Chinese Financial Benchmark for Large Language Models </a>[<a href="https://github.com/RenShuhuai-Andy/TimeChat">code</a>]<br>
-       <b>Ying Nie<b><sup>*</sup>, Binwei Yan<sup>*</sup>, Tianyu Guo, Hao Liu, Haoyu Wang, Wei He, Binfan Zheng, Weihao Wang, Qiang Li, Weijian Sun, Yunhe Wang<sup>#</sup>, Dacheng Tao<br>
+       <a href="">  CFinBench: A Comprehensive Chinese Financial Benchmark for Large Language Models </a>[<a href="https://cfinbench.github.io/">project</a>]<br>
+       <b>Ying Nie</b><sup>*</sup>, Binwei Yan<sup>*</sup>, Tianyu Guo, Hao Liu, Haoyu Wang, Wei He, Binfan Zheng, Weihao Wang, Qiang Li, Weijian Sun, Yunhe Wang<sup>#</sup>, Dacheng Tao<br>
        <i>Proceedings of the 2025 Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics (NAACL Main),  April 2025. </i> <br>
     </p>
   </li>
