--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 	<p style="margin:-10px 0 0 0" class="civi_addr">
     <span style="font-style:italic; color:#ff6600;">Stay True | Passionate</span>
 	</p>
+	<p style="margin:3px 0 0 0" class="civi_addr">
     <p style="margin:-10px 0 0 0" class="civi_addr">Researcher, Huawei Noah's Ark Lab</p>
     <p style="margin:-10px 0 0 0" class="civi_addr">
       Email: ying.nie@zju.edu.cn, ying.nie@huawei.com
