--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <H3>News</H3>
   <UL>
   <LI>
-  [2025-5]🔥Our paper (<A href="https://proceedings.mlr.press/v267/han25j.html">moragent: parameter efficient agent tuning with mixture-of-roles</A>) accepted to ICML 2025.  The project is available <A href="hhttps://mor-agent.github.io/"> here</A>.
+  [2025-5]🔥Our paper (<A href="https://proceedings.mlr.press/v267/han25j.html">MoRAgent: parameter efficient agent tuning with mixture-of-roles</A>) accepted to ICML 2025.  The project is available <A href="hhttps://mor-agent.github.io/"> here</A>.
   </LI>
 </UL>
 
@@ -98,7 +98,8 @@
 <div style="padding:6px;"> </div>
 <h3>Publications</h3>
 <div>
-(*: Equal contribution; #: Corresponding author/Project Leader;)
+(*: Equal contribution, #: Corresponding author/Project Leader)
+<p style="margin:2px 0 0 0" class="civi_addr">
 <ol>
 
 	
@@ -108,6 +109,13 @@
        <a href="">  CFinBench: A Comprehensive Chinese Financial Benchmark for Large Language Models </a>[<a href="https://cfinbench.github.io/">project</a>]<br>
        <b>Ying Nie</b><sup>*</sup>, Binwei Yan<sup>*</sup>, Tianyu Guo, Hao Liu, Haoyu Wang, Wei He, Binfan Zheng, Weihao Wang, Qiang Li, Weijian Sun, Yunhe Wang<sup>#</sup>, Dacheng Tao<br>
        <i>Proceedings of the 2025 Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics (NAACL Main),  April 2025. </i> <br>
+    </p>
+  </li>
+  <li>
+    <p>
+       <a href="">  Circle-RoPE: Cone-like Decoupled Rotary Positional Embedding for Large Vision-Language Models </a>[<a href="https://cfinbench.github.io/">project</a>]<br>
+       Chengcheng Wang, Jianyuan Guo, Hongguang Li, Yuchuan Tian, <b>Ying Nie</b><sup>*</sup>, Chang Xu<sup>#</sup>, Kai Han<sup>#</sup>
+       <i>arXiv,  May 2025. </i> <br>
     </p>
   </li>
 
