--- a/index.html
+++ b/index.html
@@ -90,9 +90,12 @@
 <H3>News</H3>
   <UL>
   <LI>
-  [2025-5]🔥Our paper (<A href="https://proceedings.mlr.press/v267/han25j.html">MoRAgent: parameter efficient agent tuning with mixture-of-roles</A>) accepted to ICML 2025.  The project is available <A href="hhttps://mor-agent.github.io/"> here</A>.
+      [2025-5]🔥Our paper (<A href="https://proceedings.mlr.press/v267/han25j.html">MoRAgent: Parameter Efficient Agent Tuning with Mixture-of-Roles</A>) accepted to ICML 2025.  The project is available <A href="https://mor-agent.github.io/"> here</A>.
   </LI>
-</UL>
+  <LI>
+      [2025-1]🔥Our paper (<A href="https://aclanthology.org/2025.naacl-long.40/">CFinBench: A Comprehensive Chinese Financial Benchmark for Large Language Models</A>) accepted to NAACL 2025 Main.  The project is available <A href="https://cfinbench.github.io/"> here</A>.
+  </LI>
+  </UL>
 
 
 <div style="padding:6px;"> </div>
@@ -106,18 +109,26 @@
 <b>2025</b> 
   <li>
     <p>
+       <a href="">  Circle-RoPE: Cone-like Decoupled Rotary Positional Embedding for Large Vision-Language Models </a>[<a href="https://arxiv.org/pdf/2505.16416/">project</a>]<br>
+       Chengcheng Wang, Jianyuan Guo, Hongguang Li, Yuchuan Tian, <b>Ying Nie</b><sup>*</sup>, Chang Xu<sup>#</sup>, Kai Han<sup>#</sup>
+       <i>arXiv,  May 2025. </i> <br>
+    </p>
+  </li>
+  <li>
+    <p>
+       <a href="">  MoRAgent: Parameter Efficient Agent Tuning with Mixture-of-Roles </a>[<a href="https://icml.cc/virtual/2025/poster/43879/">project</a>]<br>
+       Jing Han<sup>*</sup>, Binwei Yan<sup>*</sup>, Jianyuan Guo, Zheyuan Bai, Mengyu Zheng, Ting Han, <b>Ying Nie</b><sup>*</sup><sup>#</sup>
+       <i>arXiv,  May 2025. </i> <br>
+    </p>
+  </li>
+  <li>
+    <p>
        <a href="">  CFinBench: A Comprehensive Chinese Financial Benchmark for Large Language Models </a>[<a href="https://cfinbench.github.io/">project</a>]<br>
        <b>Ying Nie</b><sup>*</sup>, Binwei Yan<sup>*</sup>, Tianyu Guo, Hao Liu, Haoyu Wang, Wei He, Binfan Zheng, Weihao Wang, Qiang Li, Weijian Sun, Yunhe Wang<sup>#</sup>, Dacheng Tao<br>
        <i>Proceedings of the 2025 Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics (NAACL Main),  April 2025. </i> <br>
     </p>
   </li>
-  <li>
-    <p>
-       <a href="">  Circle-RoPE: Cone-like Decoupled Rotary Positional Embedding for Large Vision-Language Models </a>[<a href="https://cfinbench.github.io/">project</a>]<br>
-       Chengcheng Wang, Jianyuan Guo, Hongguang Li, Yuchuan Tian, <b>Ying Nie</b><sup>*</sup>, Chang Xu<sup>#</sup>, Kai Han<sup>#</sup>
-       <i>arXiv,  May 2025. </i> <br>
-    </p>
-  </li>
+
 
 		
   <li>
