--- a/index.html
+++ b/index.html
@@ -109,28 +109,53 @@
 <b>2025</b> 
   <li>
     <p>
-       <a href="">  Circle-RoPE: Cone-like Decoupled Rotary Positional Embedding for Large Vision-Language Models </a>[<a href="https://arxiv.org/pdf/2505.16416/">project</a>]<br>
-       Chengcheng Wang, Jianyuan Guo, Hongguang Li, Yuchuan Tian, <b>Ying Nie</b><sup>*</sup>, Chang Xu<sup>#</sup>, Kai Han<sup>#</sup>
+       <a href="https://arxiv.org/pdf/2505.16416/">  Circle-RoPE: Cone-like Decoupled Rotary Positional Embedding for Large Vision-Language Models </a><br>
+       Chengcheng Wang, Jianyuan Guo, Hongguang Li, Yuchuan Tian, <b>Ying Nie</b><sup>*</sup>, Chang Xu<sup>#</sup>, Kai Han<sup>#</sup><br>
        <i>arXiv,  May 2025. </i> <br>
     </p>
   </li>
   <li>
     <p>
-       <a href="">  MoRAgent: Parameter Efficient Agent Tuning with Mixture-of-Roles </a>[<a href="https://icml.cc/virtual/2025/poster/43879/">project</a>]<br>
-       Jing Han<sup>*</sup>, Binwei Yan<sup>*</sup>, Jianyuan Guo, Zheyuan Bai, Mengyu Zheng, Ting Han, <b>Ying Nie</b><sup>*</sup><sup>#</sup>
-       <i>arXiv,  May 2025. </i> <br>
+       <a href="https://icml.cc/virtual/2025/poster/43879/">  MoRAgent: Parameter Efficient Agent Tuning with Mixture-of-Roles </a><br>
+       Jing Han<sup>*</sup>, Binwei Yan<sup>*</sup>, Jianyuan Guo, Zheyuan Bai, Mengyu Zheng, Ting Han, <b>Ying Nie</b><sup>*</sup><sup>#</sup><br>
+       <i>Proceedings of the 42nd International Conference on Machine Learning, PMLR 267, 2025. </i> <br>
     </p>
   </li>
   <li>
     <p>
-       <a href="">  CFinBench: A Comprehensive Chinese Financial Benchmark for Large Language Models </a>[<a href="https://cfinbench.github.io/">project</a>]<br>
+       <a href="https://aclanthology.org/2025.naacl-long.40/">  CFinBench: A Comprehensive Chinese Financial Benchmark for Large Language Models </a><br>
        <b>Ying Nie</b><sup>*</sup>, Binwei Yan<sup>*</sup>, Tianyu Guo, Hao Liu, Haoyu Wang, Wei He, Binfan Zheng, Weihao Wang, Qiang Li, Weijian Sun, Yunhe Wang<sup>#</sup>, Dacheng Tao<br>
        <i>Proceedings of the 2025 Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics (NAACL Main),  April 2025. </i> <br>
     </p>
   </li>
+  <li>
+    <p>
+       <a href="https://ojs.aaai.org/index.php/AAAI/article/view/33206">  L-Man: A Large Multi-modal Model Unifying Human-centric Tasks </a><br>
+       Jialong Zuo, <b>Ying Nie</b>, Tianyu Guo, Huaxin Zhang, Jiahao Hong, Nong Sang, Changxin Gao<sup>#</sup>, Kai Han<sup>#</sup><br>
+       <i>Proceedings of the AAAI Conference on Artificial Intelligence, 2025. </i> <br>
+    </p>
+  </li>
+  
+ <p style="margin:2px 0 0 0" class="civi_addr">
+<b>2024</b> 
+  <li>
+    <p>
+       <a href="https://proceedings.neurips.cc/paper_files/paper/2024/hash/2ce10f144bb93449767f355c01f24cc1-Abstract-Conference.html">  Cross-video identity correlating for person re-identification pre-training </a><br>
+       Jialong Zuo, <b>Ying Nie</b>, Hanyu Zhou, Huaxin Zhang, Haoyu Wang, Tianyu Guo, Nong Sang, Changxin Gao<sup>#</sup><br>
+       <i>Advances in Neural Information Processing Systems 37 (NeurIPS 2024) Main Conference Track. </i> <br>
+    </p>
+  </li>
+  <li>
+    <p>
+       <a href="https://openaccess.thecvf.com/content/CVPR2024/html/Zuo_UFineBench_Towards_Text-based_Person_Retrieval_with_Ultra-fine_Granularity_CVPR_2024_paper.html">  UFineBench: Towards Text-based Person Retrieval with Ultra-fine Granularity </a><br>
+       Jialong Zuo,  Hanyu Zhou, <b>Ying Nie</b>, Feng Zhang, Hanyu Zhou, Tianyu Guo, Nong Sang, Yunhe Wang, Changxin Gao<sup>#</sup><br>
+       <i>Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), 2024. </i> <br>
+    </p>
+  </li>
 
 
-		
+<p style="margin:2px 0 0 0" class="civi_addr">
+<b>2021</b> 
   <li>
     <p>
        <a href="https://www.bmvc2021-virtualconference.com/assets/papers/0871.pdf">  Multi-bit Adaptive Distillation for Binary Neural Networks </a><br>
