--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 <b>2025</b> 
   <li>
     <p>
-       <a href="https://arxiv.org/pdf/2505.16416/">  Circle-RoPE: Cone-like Decoupled Rotary Positional Embedding for Large Vision-Language Models </a><br>
-       Chengcheng Wang, Jianyuan Guo, Hongguang Li, Yuchuan Tian, <b>Ying Nie</b><sup>*</sup>, Chang Xu<sup>#</sup>, Kai Han<sup>#</sup><br>
+       <a href="https://arxiv.org/abs/2505.16416">  Circle-RoPE: Cone-like Decoupled Rotary Positional Embedding for Large Vision-Language Models </a><br>
+       Chengcheng Wang, Jianyuan Guo, Hongguang Li, Yuchuan Tian, <b>Ying Nie</b>, Chang Xu<sup>#</sup>, Kai Han<sup>#</sup><br>
        <i>arXiv,  May 2025. </i> <br>
     </p>
   </li>
@@ -135,8 +135,8 @@
        <i>Proceedings of the AAAI Conference on Artificial Intelligence, 2025. </i> <br>
     </p>
   </li>
-  
  <p style="margin:2px 0 0 0" class="civi_addr">
+ 
 <b>2024</b> 
   <li>
     <p>
@@ -152,7 +152,47 @@
        <i>Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), 2024. </i> <br>
     </p>
   </li>
+<p style="margin:2px 0 0 0" class="civi_addr">
 
+<b>2023</b> 
+<li>
+    <p>
+       <a href="https://arxiv.org/abs/2312.17276">  PanGu-π: Enhancing Language Model Architectures via Nonlinearity Compensation </a><br>
+       Yunhe Wang, Hanting Chen, Yehui Tang, Tianyu Guo, Kai Han, <b>Ying Nie</b>, Xutao Wang, Hailin Hu, Zheyuan Bai, Yun Wang, Fangcheng Liu, Zhicheng Liu, Jianyuan Guo, Sinan Zeng, Yinchen Zhang, Qinghua Xu, Qun Liu, Jun Yao, Chao Xu, Dacheng Tao<br>
+       <i>arXiv,  December 2025. </i> <br>
+    </p>
+</li>
+<li>
+    <p>
+       <a href="https://proceedings.neurips.cc/paper_files/paper/2023/hash/8cb92f326d01fd7f4371283ee2fa6386-Abstract-Datasets_and_Benchmarks.html">  Species196: A one-million semi-supervised dataset for fine-grained species recognition </a><br>
+       Wei He, Kai Han<sup>#</sup>, <b>Ying Nie</b>, Chengcheng Wang, Yunhe Wang<sup>#</sup><br>
+       <i>Advances in Neural Information Processing Systems 36 (NeurIPS 2023) Datasets and Benchmarks Track. </i> <br>
+    </p>
+</li>
+<li>
+    <p>
+       <a href="https://proceedings.neurips.cc/paper_files/paper/2023/hash/a0673542a242759ea637972f053b2e0b-Abstract-Conference.html">  Gold-YOLO: Efficient object detector via gather-and-distribute mechanism </a><br>
+       Chengcheng Wang, Wei He, <b>Ying Nie</b>, Jianyuan Guo, Chuanjian Liu, Yunhe Wang<sup>#</sup>, Kai Han<sup>#</sup><br>
+       <i>Advances in Neural Information Processing Systems 36 (NeurIPS 2023) Main Conference Track. </i> <br>
+    </p>
+</li>
+<li>
+    <p>
+       <a href="https://arxiv.org/pdf/2312.00674">  Lightclip: learning multi-level interaction for lightweight vision-language models </a><br>
+       <b>Ying Nie</b>, Wei He, Kai Han<sup>#</sup>, Yehui Tang, Tianyu Guo, Fanyi Du, Yunhe Wang<sup>#</sup><br>
+       <i>arXiv,  December 2023. </i> <br>
+    </p>
+</li>
+<p style="margin:2px 0 0 0" class="civi_addr">
+
+<b>2022</b> 
+<li>
+    <p>
+       <a href="https://proceedings.neurips.cc/paper_files/paper/2022/hash/fcfad93e2f30ab4c22f9ec5edfbb5cc0-Abstract-Conference.html">  A transformer-based object detector with coarse-fine crossing representations </a><br>
+       Zhishan Li, <b>Ying Nie</b>, Kai Han, Jianyuan Guo, Lei Xie, Yunhe Wang<sup>#</sup><br>
+       <i>Advances in Neural Information Processing Systems 35 (NeurIPS 2022) Main Conference Track. </i> <br>
+    </p>
+</li>
 
 <p style="margin:2px 0 0 0" class="civi_addr">
 <b>2021</b> 
