--- a/index.html
+++ b/index.html
@@ -193,9 +193,37 @@
        <i>Advances in Neural Information Processing Systems 35 (NeurIPS 2022) Main Conference Track. </i> <br>
     </p>
 </li>
+<li>
+    <p>
+       <a href="https://proceedings.neurips.cc/paper_files/paper/2022/hash/8f15e0b418ccdefec8313affc897dc8c-Abstract-Conference.html">  Redistribution of weights and activations for AdderNet quantization </a><br>
+       <b>Ying Nie</b>, Kai Han, Haikang Diao, Chuanjian Liu, Enhua Wu, Yunhe Wang<sup>#</sup><br>
+       <i>Advances in Neural Information Processing Systems 35 (NeurIPS 2022) Main Conference Track. </i> <br>
+    </p>
+</li>
+<li>
+    <p>
+       <a href="https://openaccess.thecvf.com/content/CVPR2022W/NAS/papers/Liu_Network_Amplification_With_Efficient_MACs_Allocation_CVPRW_2022_paper.pdf">  Network amplification with efficient macs allocation </a><br>
+       Chuanjian Liu, Kai Han, An Xiao, <b>Ying Nie</b>, Wei Zhang, Yunhe Wang<sup>#</sup><br>
+       <i>Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition WorkShop, 2022. </i> <br>
+    </p>
+</li>
 
 <p style="margin:2px 0 0 0" class="civi_addr">
 <b>2021</b> 
+  <li>
+    <p>
+       <a href="https://proceedings.neurips.cc/paper_files/paper/2021/file/e56954b4f6347e897f954495eab16a88-Paper.pdf">  Dynamic resolution network </a><br>
+       Mingjian Zhu, Kai Han, Enhua Wu, Qiulin Zhang, <b>Ying Nie</b>, Zhenzhong Lan, Yunhe Wang<sup>#</sup><br>
+       <i>Advances in Neural Information Processing Systems 34 (NeurIPS 2021). </i> <br>
+    </p>
+  </li>
+    <li>
+    <p>
+       <a href="https://openreview.net/pdf?id=tbd9f3HwPy">  GhostSR: Learning Ghost Features for Efficient Image Super-Resolution </a><br>
+       <b>Ying Nie</b>, Kai Han, Zhenhua Liu, Chuanjian Liu, Yunhe Wang<sup>#</sup><br>
+       <i>Transactions on Machine Learning Research. </i> <br>
+    </p>
+  </li>
   <li>
     <p>
        <a href="https://www.bmvc2021-virtualconference.com/assets/papers/0871.pdf">  Multi-bit Adaptive Distillation for Binary Neural Networks </a><br>
