--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <p>
        <a href="https://icml.cc/virtual/2025/poster/43879/">  MoRAgent: Parameter Efficient Agent Tuning with Mixture-of-Roles </a><br>
        Jing Han<sup>*</sup>, Binwei Yan<sup>*</sup>, Jianyuan Guo, Zheyuan Bai, Mengyu Zheng, Ting Han, <b>Ying Nie</b><sup>*</sup><sup>#</sup><br>
-       <i>Proceedings of the 42nd International Conference on Machine Learning, PMLR 267, 2025. </i> <br>
+       <i>Proceedings of the 42nd International Conference on Machine Learning, ICML 2025. </i> <br>
     </p>
   </li>
   <li>
